fixed some crowding issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: space-around;
-  width: 30%;
+  width: 45%;
   text-decoration: none;
 }
 
@@ -238,7 +238,7 @@ header nav ul a {
   flex-basis: 80%
   font-size: 2.3em;
   text-align: right;
-  margin: 10px 10px 0 0;
+  margin: 0px 10px 0 0;
 }
 
 .intro p {
@@ -248,7 +248,7 @@ header nav ul a {
   color: #1f2a2c;
   font-size: 1.24em;
   text-align: right;
-  margin: 10px 10px 0 0;
+  margin: 5px 10px 0 0;
 }
 
 /******* Footer Styles *********/
